--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,7 +1,11 @@
 {% include base_path %}
 
 <!-- start custom head snippets -->
-
+<div style="position:absolute; top:1rem; right:1rem;">
+  <a href="https://www.uni-rostock.de/" target="_blank" rel="noopener">
+    <img src="{{ '/images/URO.svg' | relative_url }}" alt="University of Rostock" style="height:40px;"/>
+  </a>
+</div>
 <!-- Support for Academicons -->
 <link rel="stylesheet" href="{{ base_path }}/assets/css/academicons.css"/>
 
