--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -22,7 +22,7 @@
       <a href="{{ author.employer_uri }}" target="_blank" rel="noopener">
         <img src="{{ '/images/' | append: author.employer_logo | relative_url }}" 
              alt="{{ author.employer }}" 
-             style="max-width:95%; margin-bottom:0;" />
+             style="max-height:48px; max-width:95%; margin-bottom:0;" />
       </a>
     </div>
   </div>
