--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -24,7 +24,7 @@
   <div class="author__urls-wrapper">
     <button class="btn btn--inverse">Follow</button>
     <ul class="author__urls social-icons">
-      <div style="text-align:left; margin: 1.5em 0 0 0;">
+      <div style="text-align:left">
         <a href="{{ author.employer_uri }}" target="_blank" rel="noopener">
           <img src="{{ '/images/' | append: author.employer_logo | relative_url }}" 
                alt="{{ author.employer }}" 
