--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -28,7 +28,7 @@
         <a href="{{ author.employer_uri }}" target="_blank" rel="noopener">
           <img src="{{ '/images/' | append: author.employer_logo | relative_url }}" 
                alt="{{ author.employer }}" 
-               style="max-height:42px; max-width:95%; margin-bottom:0; background-color:white;" />
+               style="max-width:95%; margin-bottom:0; background-color:white;" />
         </a>
       </div>
 
